# streambuddy

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.minimal  FRONTEND_PROMPT.md  README.md  analyze_size.sh  deep_analysis.sh  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.git.backup_2/: index
.github/workflows/: deploy.yml  deploy.yml.disabled
ansible/: .env.j2  playbook.yml
app/: docker-entrypoint.sh  dump.rdb  manage.py  requirements.txt  setup.py
app/accounts/: models.py  serializers.py
app/accounts/migrations/: 0001_initial.py
app/core/: tasks.py  urls.py  views.py
app/core/api/: streaming.py  upload.py
app/core/serializers/: video.py
app/core/services/: storage.py  streaming.py  video_processor.py
app/core/utils/: filename_utils.py  validators.py  video_helpers.py
app/media/metadata/: Test Video.json
app/streambuddy/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
app/streambuddy_common/: apps.py  exceptions.py  middleware.py  throttles.py
app/streambuddy_common/utils/: file_helpers.py  progress_tracker.py
app/videos/: forms.py  models.py  tasks.py  tests.py  urls.py
app/videos/api/: streaming.py  upload.py
app/videos/migrations/: 0001_initial.py
app/videos/serializers/: video.py
app/videos/services/: storage.py  streaming.py  (+1 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
infra/pulumi/: Pulumi.yaml  __main__.py
(+19 files in other folders)
