[project]
name = "streambuddy"
version = "0.1.0"
description = "Video Streaming Platform with DASH Support"
readme = {text = "StreamBuddy is a scalable video streaming platform built using Django REST API, DASH, and AWS S3 for storage."}
requires-python = ">=3.12"
dependencies = [
    "django==5.0.1",
    "djangorestframework==3.14.0",
    "psycopg2-binary==2.9.9",
    "django-cors-headers==4.3.1",
    "celery==5.3.6",
    "redis==5.0.1",
    "dj-rest-auth==5.0.2",
    "django-allauth==0.61.1",
    "boto3==1.34.1",
    "django-storages==1.14.2",
    "uvicorn==0.25.0",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "django-filter==23.5",
    "django-cleanup==8.0.0",
    "django-extensions==3.2.3",
    "ffmpeg-python==0.2.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "flake8==7.0.0",
    "pytest==7.4.3",
    "pytest-django==4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"